# amoco

./: .readthedocs.yaml  README.rst  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ruff.yml
amoco/: cfg.py  code.py  config.py  db.py  emu.py  logger.py  main.py  signals.py
amoco/arch/: core.py  gas.py  io.py
amoco/arch/arm/: cpu_armv7.py  cpu_armv8.py
amoco/arch/avr/: asm.py  cpu.py  env.py  formats.py  spec.py
amoco/arch/dwarf/: asm.py  cpu.py  env.py  formats.py  spec.py
amoco/arch/eBPF/: asm.py  cpu.py  cpu_bpf.py  (+4 more)
amoco/cas/: __init__.py  blobs.py  expressions.py  mapper.py  parser.py  smt.py  tracker.py  utils.py
amoco/sa/: __init__.py  backward.py  forward.py  ghidra.py  lsweep.py  utils.py
amoco/system/: coff.py  core.py  elf.py  gdb_tfile.py  macho.py  memory.py  pe.py  raw.py  utils.py
amoco/ui/: app.py  cli.py  render.py  srv.py  views.py
doc/: arch.rst  conf.py  examples.rst  index.rst  installation.rst  overview.rst  quickstart.rst  requirements.txt
tests/: conftest.py  test_arch_armv7.py  test_arch_armv8.py  test_arch_ppc.py  test_arch_sparc.py  test_arch_tricore.py  test_arch_wasm.py  test_arch_x64.py  test_arch_x64_mapper.py  test_arch_x86.py  test_cas_blob.py  test_cas_exp.py  test_cas_mapper.py  test_cas_smt.py  test_code.py  test_main_target.py  test_signals.py  test_system_core.py  test_system_elf.py  test_system_imx6.py  test_system_loader.py  test_system_macho.py  test_system_pe.py  test_system_raw.py  test_system_structs.py  test_system_utils.py  test_ui_qt.py  test_ui_render.py
tests/samples/: inherit.cpp
(+178 files in other folders)
